--- a/mikufy.desktop
+++ b/mikufy.desktop
@@ -1,10 +1,10 @@
-# # Mikufy v2.5(stable)
+# # Mikufy v2.7-nova
 # 作者 luozenan
 
 [Desktop Entry]
 Type=Application
 Name=mikufy
-Comment=Mikufy v2.5
+Comment=Mikufy v2.7-nova
 Exec=mikufy
 Icon=mikufy
 Terminal=false
